fixed error with arrow not showing

--- a/src/app/swiper/swiper.component.css
+++ b/src/app/swiper/swiper.component.css
@@ -26,7 +26,6 @@
 /* pil som pekar åt vänster */
 .arrowLeft {
   cursor: pointer;
-  visibility: hidden;
   width: 50px;
   height: 50px;
   background-color: #310b02;
